test/fail/IndentedCheckingMessages.agda
module IndentedCheckingMessages where

import A.M

Foo : Set
Foo = Foo
